@@ -1,8 +1,7 @@
 package seedu.address.logic.commands;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static seedu.address.logic.commands.CommandTestUtil.assertCommandSuccess;
 import static seedu.address.testutil.TypicalDevelopers.CARL;
 import static seedu.address.testutil.TypicalDevelopers.ELLE;
@@ -11,6 +10,7 @@ import static seedu.address.testutil.TypicalDevelopers.getTypicalAddressBook;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
@@ -24,8 +24,8 @@ import seedu.address.model.developer.NameDeveloperContainsKeywordsPredicate;
  * Contains integration tests (interaction with the Model) for {@code FindDeveloperCommand}.
  */
 public class FindDeveloperCommandTest {
-    private Model model = new ModelManager(getTypicalAddressBook(), new UserPrefs());
-    private Model expectedModel = new ModelManager(getTypicalAddressBook(), new UserPrefs());
+    private final Model model = new ModelManager(getTypicalAddressBook(), new UserPrefs());
+    private final Model expectedModel = new ModelManager(getTypicalAddressBook(), new UserPrefs());
 
     @Test
     public void equals() {
@@ -38,20 +38,20 @@ public class FindDeveloperCommandTest {
         FindDeveloperCommand findSecondCommand = new FindDeveloperCommand(secondPredicate);
 
         // same object -> returns true
-        assertTrue(findFirstCommand.equals(findFirstCommand));
+        assertEquals(findFirstCommand, findFirstCommand);
 
         // same values -> returns true
         FindDeveloperCommand findFirstCommandCopy = new FindDeveloperCommand(firstPredicate);
-        assertTrue(findFirstCommand.equals(findFirstCommandCopy));
+        assertEquals(findFirstCommand, findFirstCommandCopy);
 
         // different types -> returns false
-        assertFalse(findFirstCommand.equals(1));
+        assertNotEquals(1, findFirstCommand);
 
         // null -> returns false
-        assertFalse(findFirstCommand.equals(null));
+        assertNotEquals(null, findFirstCommand);
 
         // different developer -> returns false
-        assertFalse(findFirstCommand.equals(findSecondCommand));
+        assertNotEquals(findFirstCommand, findSecondCommand);
     }
 
     @Test
@@ -78,7 +78,8 @@ public class FindDeveloperCommandTest {
 
     @Test
     public void toStringMethod() {
-        NameDeveloperContainsKeywordsPredicate predicate = new NameDeveloperContainsKeywordsPredicate(Arrays.asList("keyword"));
+        NameDeveloperContainsKeywordsPredicate predicate =
+                new NameDeveloperContainsKeywordsPredicate(List.of("keyword"));
         FindDeveloperCommand findDeveloperCommand = new FindDeveloperCommand(predicate);
         String expected = FindDeveloperCommand.class.getCanonicalName() + "{predicate=" + predicate + "}";
         assertEquals(expected, findDeveloperCommand.toString());
