@@ -2,6 +2,7 @@ package seedu.address.model.person;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.Arrays;
@@ -20,30 +21,35 @@ public class NameContainsKeywordsPredicateTest {
         List<String> firstPredicateKeywordList = Collections.singletonList("first");
         List<String> secondPredicateKeywordList = Arrays.asList("first", "second");
 
-        NameDeveloperContainsKeywordsPredicate firstPredicate = new NameDeveloperContainsKeywordsPredicate(firstPredicateKeywordList);
-        NameDeveloperContainsKeywordsPredicate secondPredicate = new NameDeveloperContainsKeywordsPredicate(secondPredicateKeywordList);
+        NameDeveloperContainsKeywordsPredicate firstPredicate =
+                new NameDeveloperContainsKeywordsPredicate(firstPredicateKeywordList);
+        NameDeveloperContainsKeywordsPredicate secondPredicate =
+                new NameDeveloperContainsKeywordsPredicate(secondPredicateKeywordList);
 
         // same object -> returns true
-        assertTrue(firstPredicate.equals(firstPredicate));
+        assertEquals(firstPredicate, firstPredicate);
 
         // same values -> returns true
-        NameDeveloperContainsKeywordsPredicate firstPredicateCopy = new NameDeveloperContainsKeywordsPredicate(firstPredicateKeywordList);
-        assertTrue(firstPredicate.equals(firstPredicateCopy));
+        NameDeveloperContainsKeywordsPredicate firstPredicateCopy =
+                new NameDeveloperContainsKeywordsPredicate(firstPredicateKeywordList);
+        assertEquals(firstPredicate, firstPredicateCopy);
 
         // different types -> returns false
-        assertFalse(firstPredicate.equals(1));
+        assertNotEquals(1, firstPredicate);
 
         // null -> returns false
-        assertFalse(firstPredicate.equals(null));
+        assertNotEquals(null, firstPredicate);
 
         // different developer -> returns false
-        assertFalse(firstPredicate.equals(secondPredicate));
+        assertNotEquals(firstPredicate, secondPredicate);
     }
+
 
     @Test
     public void test_nameContainsKeywords_returnsTrue() {
         // One keyword
-        NameDeveloperContainsKeywordsPredicate predicate = new NameDeveloperContainsKeywordsPredicate(Collections.singletonList("Alice"));
+        NameDeveloperContainsKeywordsPredicate predicate =
+                new NameDeveloperContainsKeywordsPredicate(Collections.singletonList("Alice"));
         assertTrue(predicate.test(new DeveloperBuilder().withName("Alice Bob").build()));
 
         // Multiple keywords
@@ -62,11 +68,12 @@ public class NameContainsKeywordsPredicateTest {
     @Test
     public void test_nameDoesNotContainKeywords_returnsFalse() {
         // Zero keywords
-        NameDeveloperContainsKeywordsPredicate predicate = new NameDeveloperContainsKeywordsPredicate(Collections.emptyList());
+        NameDeveloperContainsKeywordsPredicate predicate =
+                new NameDeveloperContainsKeywordsPredicate(Collections.emptyList());
         assertFalse(predicate.test(new DeveloperBuilder().withName("Alice").build()));
 
         // Non-matching keyword
-        predicate = new NameDeveloperContainsKeywordsPredicate(Arrays.asList("Carol"));
+        predicate = new NameDeveloperContainsKeywordsPredicate(List.of("Carol"));
         assertFalse(predicate.test(new DeveloperBuilder().withName("Alice Bob").build()));
 
         // Keywords match phone, email and address, but does not match name
